// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/HighlightedName Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <span
      class="sc-fKVsgm hjxFYR sc-iwjezw iSSwMh sc-GEcJY UjJcN sc-gsNhcj erTwPI"
    >
      Frontend Service
    </span>
  </div>
</div>
`;

exports[`Storyshots Core/HighlightedName With Custom Colors 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <span
      class="sc-fKVsgm hjxFYR sc-iwjezw jtOdhu sc-GEcJY UjJcN sc-gsNhcj jCxAGb"
    >
      Frontend Service
    </span>
  </div>
</div>
`;
